k8s/istio/booking-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /booking  # HTTP path prefix
    route:
    - destination:
        host: booking-service
        port:
          number: 50052  # gRPC port
