k8s/istio/user-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /user  # HTTP path prefix
    route:
    - destination:
        host: user-service
        port:
          number: 50051  # gRPC port
